[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Singletons/Tooltips/tooltip_node.gd" type="Script" id=1]
[ext_resource path="res://mods/Timimimi.Mii/Assets/Tex/MakerCatHead.png" type="Texture2D" id=2]
[ext_resource path="res://Assets/Textures/UI/badges8.png" type="Texture2D" id=3]
[ext_resource path="res://mods/Timimimi.Mii/Assets/Material/CmnLightenMat.material" type="Material" id=4]
[ext_resource path="res://mods/Timimimi.Mii/Assets/Node/Menu/MakerCategoryButton.gd" type="Script" id=5]
[ext_resource path="res://mods/Timimimi.Mii/Assets/Tex/MakerCatCmn.png" type="Texture2D" id=6]

[node name="maker_cat_button" type="Control"]
anchor_right = 0.071
anchor_bottom = 0.121
offset_right = -0.320007
offset_bottom = 0.319992
custom_minimum_size = Vector2( 136, 131 )
mouse_filter = 2
script = ExtResource( 5 )
y_offset = 30

[node name="shadow" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.294118 )
anchor_right = 1.035
anchor_bottom = 1.0
offset_top = 4.0
offset_right = -4.75999
offset_bottom = 65.0
mouse_filter = 2
texture = ExtResource( 3 )

[node name="TextureButton" type="TextureButton" parent="."]
anchor_right = 1.0
offset_bottom = 61.0
texture_normal = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="TextureButton"]
modulate = Color( 1, 1, 1, 0.588235 )
material = ExtResource( 4 )
anchor_right = 1.035
anchor_bottom = 1.0
offset_top = -3.0
offset_right = -4.75999
offset_bottom = -3.0
mouse_filter = 2
texture = ExtResource( 6 )

[node name="TextureRect2" type="TextureRect" parent="TextureButton"]
anchor_right = 1.035
anchor_bottom = 1.0
offset_top = -3.0
offset_right = -4.75999
offset_bottom = -3.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="TooltipNode" type="Control" parent="TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
header = "test"
body = "test"

[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
